[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/actors/Objects/Bonuses/PassiveBonus/Base/PassiveBonus.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=54]

[node name="PassiveBonus" type="Area2D" groups=["PassiveBonus"]]
scale = Vector2( 0.3, 0.3 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3.97364e-07 )
shape = SubResource( 54 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Bonus_area_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
